changed title color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -549,7 +549,7 @@ section {
   float: left;
   line-height: 50px;
   font-size: 20px;
-  color: rgb(94, 204, 241);
+  color: #007ced;
   font-weight: 600;
 }
 
